<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="app_name">华创家校通</string>
    <string name="app_packagename">com.school_contact.main</string>
    <string name="app_versionName">1.0</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗？</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="newmessgae">新</string>
    <string name="Login_page">欢迎登陆</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">首页</string>
    <string name="query_title">搜索</string>
    <string name="contract_title">我的群组</string>
    <string name="more_title">更多</string>
    <string name="modifypwd">修改密码</string>
    <string name="usersetting">设置</string>
    <string name="pushdetail">消息</string>
    <string name="logout">注销</string>
    <string name="about">关于</string>
    <string name="temusername"></string>
    <string name="tempaccount"> 当前未登录 </string>
    <string name="sessionlist">会话列表</string>
    <string name="seegroup">查看群组</string>
    <string name="contact">联系人</string>
    <string name="mainpage">首页</string>
    <string name="me">我</string>
    <string name="userinfor_photo">头像</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_tel">电话</string>
    <string name="curr_pwd">请输入当前密码</string>
    <string name="newpwd">请输入新密码</string>
    <string name="againpwd">请再次输入密码</string>
    <string name="logouting">登出中....</string>
    <string name="doing">操作中....</string>
    <string name="uploading">上传中....</string>
    <string name="logining">登录中....</string>
    <string name="publishing">发布中....</string>
    <string name="submit">确定</string>
    <string name="voice">声音/静音</string>
    <string name="shack">震动/静音</string>
    <string name="linstenvoice">使用听筒播放声音</string>
    <string name="help">使用帮助</string>
    <string name="update">检查更新</string>
    <string name="request">意见反馈</string>
    <string name="lisence">使用协议</string>
    <string name="version">V1.0</string>
    <string name="forgetpwd">密码重置</string>
    <string name="inputphonenumber">请输入手机号码</string>
    <string name="inputnum">请输入验证码</string>
    <string name="feedback">反馈</string>
    <string name="fromggallery">从相册选取</string>
    <string name="fromcamera">拍照选取</string>
    <string name="cancel">取消</string>
    <string name="per_info">个人信息</string>
    <string name="back">返回</string>
    <string name="softtitle">华创家校通</string>
    <string name="sendNotification">通知</string>
    <string name="notification_sort">类型:</string>
    <string name="notification_group">群组:</string>
    <string name="notification_string">通知</string>
    <string name="notification_send">发送</string>
    <string name="announcement_string">通知</string>
    <string name="task_string">作业</string>
    <string name="notification_list_string">通知列表</string>
    <string name="pyq">朋友圈</string>
    <string name="chooseGroup">请选择班级:</string>
    <string name="getgroup">班级圈分组获取中....</string>

</resources>