<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee" >

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/per_info"
            android:textColor="@color/white" />

        <!-- android:cacheColorHint="#00000000"简单的列表显示 -->

    </LinearLayout>

    <TextView
        android:id="@+id/backtext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/rc_bar_back"
        android:gravity="center_vertical"
        android:text="@string/back"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_title"
        android:layout_marginTop="13dp"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/userinfor_photo" />

        <ImageView
            android:id="@+id/imagetitle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/userinfor_enter"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/userinfor_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/modifypwd_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/info_layout"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_name" />

        <ImageView
            android:id="@+id/modifypwd_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/modifypwd_enter"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/modifypwd_enter"
            android:text="null" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/modifypwd_layout"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_sex" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ImageView01"
            android:layout_toLeftOf="@+id/ImageView01"
            android:text="男" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_logout"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/RelativeLayout02"
        android:layout_marginTop="36dp"
        android:text="@string/logout" />

    <RelativeLayout
        android:id="@+id/RelativeLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout01"
        android:layout_centerVertical="true"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_tel" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ImageView02"
            android:layout_toLeftOf="@+id/ImageView02"
            android:text="13333333333" />
    </RelativeLayout>

</RelativeLayout>