<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/black" >

          <TextView
            android:id="@+id/backtext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/notification_string"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/notification_send_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/notification_send" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/sort_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_sort"
            android:textSize="20sp" 
            android:textColor="#aaaaaa"/>

        <TextView
            android:id="@+id/sort_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />
    
    <LinearLayout
        android:id="@+id/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_group"
            android:textSize="20sp" 
            android:textColor="#aaaaaa" />

        <TextView
            android:id="@+id/group_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>
    
    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

    <LinearLayout
        android:id="@+id/add_attachment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="添加附件..."
            android:drawableRight="@drawable/attachment"
            android:textSize="20sp" 
            android:textColor="#aaaaaa"/>
    </LinearLayout>
    
    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

    <EditText
        android:id="@+id/notification_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:gravity="top"
        android:hint="请在此输入通知内容"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="8"
        android:scrollbars="vertical" ><!-- android:background="@android:drawable/edit_text" -->
    </EditText>

    <ListView
        android:id="@+id/attachment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>