<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee" >

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        android:orientation="horizontal" >

        

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/usersetting"
            android:textColor="@color/white" />

        <!-- android:cacheColorHint="#00000000"简单的列表显示 -->

    </LinearLayout>

    <TextView
            android:id="@+id/backtext"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/black"
            android:drawableLeft="@drawable/rc_bar_back"
            android:gravity="center_vertical"
            android:text="返回"
            android:textColor="@color/white" />
    <RelativeLayout
        android:id="@+id/modifypwd_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll_title"
        android:layout_marginTop="27dp"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/voice" />

        <ToggleButton
            android:id="@+id/tb_voice"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="ToggleButton" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout01"
        android:layout_marginTop="27dp"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" 
        android:visibility="invisible">

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/linstenvoice" />

        <ToggleButton
            android:id="@+id/tb_listenvoice"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="ToggleButton" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/modifypwd_layout"
        android:layout_marginTop="18dp"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/shack" />

        <ToggleButton
            android:id="@+id/tb_shack"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="ToggleButton" />
    </RelativeLayout>
    
    <Button
            android:id="@+id/bt_logOut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/RelativeLayout02"
            android:layout_marginTop="30dp"
            android:text="@string/logout"
            style="@style/Button" />

</RelativeLayout>