<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee" >

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/usersetting"
            android:textColor="@color/white" 
            android:textSize="19sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/backtext"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/rc_bar_back"
        android:gravity="center_vertical"
        android:text="返回"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/ll_appimg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll_title"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/softtitle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/version" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll_appimg"
        
        android:layout_marginTop="30dp"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

       <ImageView
           android:id="@+id/ImageView06"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_centerVertical="true"
           android:contentDescription="@string/app_name"
          android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
           android:src="@drawable/fankui" />
 
        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
           android:layout_toRightOf="@+id/ImageView06"
            android:text="@string/request" />

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_use"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_feedback"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/ImageView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/xieyi" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/ImageView05"
            android:text="@string/lisence" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_use"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical" >

         <ImageView
             android:id="@+id/ImageView04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/app_name"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
             android:src="@drawable/bangzhu" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ImageView04"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            
            android:text="@string/help" />

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_help"
        android:background="@drawable/content_bg"
        android:gravity="center_vertical"
        android:visibility="gone" >

         <ImageView
             android:id="@+id/ImageView06"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/app_name"
             android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
             android:src="@drawable/bangzhu" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ImageView06"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/update" />
       

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/yjt" />

        

    </RelativeLayout>

</RelativeLayout>